--- a/Block II - Nonparametric inference/NPS-lab04_multivariate_tests.html
+++ b/Block II - Nonparametric inference/NPS-lab04_multivariate_tests.html
@@ -2272,49 +2272,20 @@ sum(T_chicks &gt;= T0)/B</code></pre>
 <pre class="r"><code>library(lmPerm)
 lmp=aovp(weight_perm ~ chickwts$feed,
          perm=&quot;Prob&quot;,
-         Cp=0.1)#cp is supposed to stop iterations when standard error is at that level...</code></pre>
-<pre><code>## [1] &quot;Settings:  unique SS &quot;</code></pre>
-<pre class="r"><code>summary(lmp)</code></pre>
-<pre><code>## Component 1 :
-##               Df R Sum Sq R Mean Sq Iter Pr(Prob)  
-## chickwts$feed  5    60344     12069 5000   0.0604 .
-## Residuals     65   366341      5636                
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+         Cp=0.1)#cp is supposed to stop iterations when standard error is at that level...
+summary(lmp)</code></pre>
 <p>let’s reduce the expected standard error…</p>
-<pre class="r"><code>lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)</code></pre>
-<pre><code>## [1] &quot;Settings:  unique SS &quot;</code></pre>
-<pre class="r"><code>summary(lmp)</code></pre>
-<pre><code>## Component 1 :
-##               Df R Sum Sq R Mean Sq Iter Pr(Prob)
-## chickwts$feed  5    60344     12069 2640   0.1038
-## Residuals     65   366341      5636</code></pre>
+<pre class="r"><code>lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)
+summary(lmp)</code></pre>
 <p>and let’s run the instruction several times</p>
-<pre class="r"><code>lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)</code></pre>
-<pre><code>## [1] &quot;Settings:  unique SS &quot;</code></pre>
-<pre class="r"><code>summary(lmp)</code></pre>
-<pre><code>## Component 1 :
-##               Df R Sum Sq R Mean Sq Iter Pr(Prob)  
-## chickwts$feed  5    60344     12069 2291  0.07289 .
-## Residuals     65   366341      5636                
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
-<pre class="r"><code>lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)</code></pre>
-<pre><code>## [1] &quot;Settings:  unique SS &quot;</code></pre>
-<pre class="r"><code>summary(lmp)</code></pre>
-<pre><code>## Component 1 :
-##               Df R Sum Sq R Mean Sq Iter Pr(Prob)
-## chickwts$feed  5    60344     12069 2906   0.1177
-## Residuals     65   366341      5636</code></pre>
-<pre class="r"><code>lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)</code></pre>
-<pre><code>## [1] &quot;Settings:  unique SS &quot;</code></pre>
-<pre class="r"><code>summary(lmp)</code></pre>
-<pre><code>## Component 1 :
-##               Df R Sum Sq R Mean Sq Iter Pr(Prob)  
-## chickwts$feed  5    60344     12069 1948  0.05595 .
-## Residuals     65   366341      5636                
-## ---
-## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1</code></pre>
+<pre class="r"><code>lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)
+summary(lmp)
+
+lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)
+summary(lmp)
+
+lmp=aovp(weight_perm ~ chickwts$feed,perm=&quot;Prob&quot;,Cp=1e-6)
+summary(lmp)</code></pre>
 <p>One may hypothesise such variance in the obtained p-value is a
 consequence of the number of iterations. Anyways, <strong>it doesn’t
 really make much sense. Don’t use it.</strong></p>
@@ -2920,11 +2891,11 @@ for(perm in 1:B){
   permutation.x &lt;- sample(n)
   permutaiton.y &lt;- sample(n)
   T0.perm.distrib[perm] &lt;- cor(data[permutation.x,1], 
-                               data[permutaiton.y,2])
+                                 data[permutaiton.y,2])^2
   }
 
 sum(T0.perm.distrib &gt;=T0)/B</code></pre>
-<pre><code>## [1] 0.463</code></pre>
+<pre><code>## [1] 0.782</code></pre>
 </div>
 <div class="footnotes footnotes-end-of-document">
 <hr />
